syntax = "proto3";

package net.cydhra.acromantula.proto;

import "net/cydhra/acromantula/proto/import.proto";
import "net/cydhra/acromantula/proto/export.proto";
import "net/cydhra/acromantula/proto/list_files_command.proto";
import "net/cydhra/acromantula/proto/view.proto";
import "net/cydhra/acromantula/proto/export_view.proto";

service CommandDispatcherService {

  rpc import (ImportCommand) returns (ImportResponse) {}

  rpc export (ExportCommand) returns (ExportResponse) {}

  rpc listFiles (ListFilesCommand) returns (ListFilesResponse) {}

  rpc view (ViewCommand) returns (ViewResponse) {}

  rpc exportView (ExportViewCommand) returns (ExportViewResponse) {}
}